<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:a="http://schemas.android.com/apk/res/android"
    a:layout_width="match_parent"
    a:layout_height="match_parent"
    a:padding="@dimen/step_1" 
    a:orientation="vertical">

    <TextView
        a:id="@+id/textView2"
        a:layout_width="match_parent"
        a:layout_height="wrap_content"
        a:gravity="left"
        a:paddingBottom="@dimen/step_1_2"
        a:singleLine="true"
        a:text="@string/view_name" />

    <TextView
        a:id="@+id/dialog_view_lecture_name"
        a:layout_width="match_parent"
        a:layout_height="wrap_content"
        a:gravity="left"
        a:paddingBottom="@dimen/step_1_2"
        a:paddingLeft="@dimen/step_1_2"
        a:singleLine="false" />

    <TextView
        a:id="@+id/textView3"
        a:layout_width="match_parent"
        a:layout_height="wrap_content"
        a:gravity="left"
        a:paddingBottom="@dimen/step_1_2"
        a:singleLine="true"
        a:text="@string/view_date" />

    <TextView
        a:id="@+id/dialog_view_lecture_date"
        a:layout_width="match_parent"
        a:layout_height="wrap_content"
        a:gravity="left"
        a:paddingBottom="@dimen/step_1_2"
        a:paddingLeft="@dimen/step_1_2"
        a:singleLine="true" />

    <TextView
        a:id="@+id/textView4"
        a:layout_width="match_parent"
        a:layout_height="wrap_content"
        a:gravity="center"
        a:paddingBottom="@dimen/step_1_2"
        a:singleLine="true"
        a:text="@string/view_comment" />

    <TextView
        a:id="@+id/dialog_view_lecture_comment"
        a:layout_width="match_parent"
        a:layout_height="wrap_content"
        a:gravity="left"
        a:paddingBottom="@dimen/step_1_2"
        a:paddingLeft="@dimen/step_1_2"
        a:singleLine="false" />
    
    

    <LinearLayout
        a:layout_width="match_parent"
        a:layout_height="wrap_content"
        a:orientation="horizontal"
        a:paddingLeft="@dimen/step_3"
        a:paddingRight="@dimen/step_3" >

        <Button
            a:id="@+id/dialog_lect_btn_change"
            a:layout_width="wrap_content"
            a:layout_height="@dimen/step_3"
            a:layout_marginRight="@dimen/step_1_2"
            a:layout_weight="1"
            a:background="@android:drawable/btn_default"
            a:paddingLeft="@dimen/step_1"
            a:paddingRight="@dimen/step_1"
            a:singleLine="true"
            a:text="@string/change"
            a:textColor="#101010" />

        <Button
            a:id="@+id/dialog_lect_btn_ok"
            a:layout_width="wrap_content"
            a:layout_height="@dimen/step_3"
            a:layout_marginLeft="@dimen/step_1_2"
            a:layout_weight="1"
            a:background="@android:drawable/btn_default"
            a:paddingLeft="@dimen/step_1"
            a:paddingRight="@dimen/step_1"
            
            a:singleLine="true"
            a:text="@string/ok"
            a:textColor="#101010" />
        
        <Button
            a:id="@+id/dialog_lect_btn_delete"
            a:layout_width="wrap_content"
            a:layout_height="@dimen/step_3"
            a:layout_marginLeft="@dimen/step_1_2"
            a:layout_weight="1"
            a:background="@android:drawable/btn_default"
            a:paddingLeft="@dimen/step_1"
            a:paddingRight="@dimen/step_1"
            a:singleLine="true"
            a:text="@string/delete"
            a:textColor="#101010" />
    </LinearLayout>

</LinearLayout>